// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`overviewPageActions all buttons 1`] = `
Array [
  <mockConstructor
    application={
      Object {
        "capabilities": Object {
          "navLinks": Object {
            "dev_tools": true,
            "management": true,
          },
        },
      }
    }
  >
    <EuiButtonEmpty
      className="kbnOverviewPageHeader__actionButton"
      data-test-subj="homeAddData"
      flush="both"
      href="/app/home#/tutorial_directory"
      iconType="plusInCircle"
    >
      Add data
    </EuiButtonEmpty>
  </mockConstructor>,
  <mockConstructor
    application={
      Object {
        "capabilities": Object {
          "navLinks": Object {
            "dev_tools": true,
            "management": true,
          },
        },
      }
    }
  >
    <EuiButtonEmpty
      className="kbnOverviewPageHeader__actionButton"
      data-test-subj="homeManage"
      flush="both"
      href="/app/management"
      iconType="gear"
    >
      Manage
    </EuiButtonEmpty>
  </mockConstructor>,
  <mockConstructor
    application={
      Object {
        "capabilities": Object {
          "navLinks": Object {
            "dev_tools": true,
            "management": true,
          },
        },
      }
    }
  >
    <EuiButtonEmpty
      className="kbnOverviewPageHeader__actionButton"
      data-test-subj="homeDevTools"
      flush="both"
      href="/app/dev_tools#/console"
      iconType="wrench"
    >
      Dev tools
    </EuiButtonEmpty>
  </mockConstructor>,
]
`;

exports[`overviewPageActions no buttons 1`] = `Array []`;

exports[`overviewPageActions only add data button 1`] = `
Array [
  <mockConstructor
    application={
      Object {
        "capabilities": Object {
          "navLinks": Object {
            "dev_tools": true,
            "management": true,
          },
        },
      }
    }
  >
    <EuiButtonEmpty
      className="kbnOverviewPageHeader__actionButton"
      data-test-subj="homeAddData"
      flush="both"
      href="/app/home#/tutorial_directory"
      iconType="plusInCircle"
    >
      Add data
    </EuiButtonEmpty>
  </mockConstructor>,
]
`;
